// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaCollectionImpl clear should remove rendered comments 1`] = `
<body>
  <a />
</body>
`;

exports[`MetaCollectionImpl constructor should hold meta-data items 1`] = `
Array [
  Object {
    "data": "meta1",
  },
  Object {
    "data": "meta2",
  },
]
`;

exports[`MetaCollectionImpl render should not render on detached element 1`] = `
<body>
  <b />
</body>
`;

exports[`MetaCollectionImpl render should not render on document node 1`] = `
<body>
  <a />
  <b />
</body>
`;

exports[`MetaCollectionImpl render should return a callback clearing only rendered comments during the call 1`] = `
<body>
  <a />
  <!--meta1-->
  <!--meta2-->
  <b />
  <!--meta3-->
  <!--meta4-->
</body>
`;

exports[`MetaCollectionImpl render should return a callback clearing rendered comments 1`] = `
<body>
  <a />
  <b />
</body>
`;

exports[`MetaCollectionImpl render should surround an element with comments 1`] = `
<body>
  <!--meta1-->
  <!--meta2-->
  <a />
  <!--meta3-->
  <!--meta4-->
  <b />
</body>
`;

exports[`MetaCollectionImpl render should surround multiple elements with comments 1`] = `
<body>
  <!--meta1-->
  <!--meta2-->
  <a />
  <b />
  <!--meta3-->
  <!--meta4-->
</body>
`;
